Add endpoint for calculating average temparature of given sensor & added swagger also
